@@ -30,6 +30,9 @@ TODO: provide something like % for easy access for parse_keysym
 TODO: description into --help output?
 TODO: rxvt -help => (see rxvt-XXX(1))?
 
+	- add shade operator in background perl extension.
+        - avoid starting or ending the selection in the middle of wide
+          characters to avoid artifacts (reproted by Tiago Resende).
 	- fix redraw bug that may occur if the character in the cursor cell has
 	  width > 1 (reported by Tiago Resende).
 	- add shade operator in background perl extension
